--- a/wp-content/themes/ward/style.css
+++ b/wp-content/themes/ward/style.css
@@ -7823,18 +7823,18 @@ a [class*=" ernestrc-"] {
 #blog-menu{
     position:relative;
     opacity:100;
-    padding-top:40px;
-    height:300px;
-    max-width:1000px;
+    /*padding-top:40px;*/
+    /*height:300px;*/
+    /*max-width:1000px;*/
     color:#555555;
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
     -ms-transition: all 0.5s;
     -o-transition: all 0.5s;
-    z-index:1000;
-    margin:0px auto;
-    padding:0 20px 0 20px;
-    list-style-type: none !important;
+    /*z-index:1000;*/
+    /*margin:0px auto;*/
+    /*padding:0 20px 0 20px;*/
+    /*list-style-type: none !important;*/
 
 }
 
@@ -7846,18 +7846,18 @@ a [class*=" ernestrc-"] {
     border-radius: 80px;
     background: transparent;
     font-size: 60px;
-    position: absolute;
-    margin-left: -60px;
+    /*position: absolute;*/
+    /*margin-left: -60px;*/
     z-index: 1000;
-    left:50%;
-    top:-15px;
-    width:100%;
-    height:inherit;
+    /*left:50%;*/
+    /*top:-15px;*/
+    /*width:100%;*/
+    /*height:inherit;*/
 
 }
 
 .home-top {
-    height:auto;
+    /*height:auto;*/
     /*overflow:hidden;*/
     /*max-width:1200px !important;*/
     /*max-height:360px;*/
@@ -7872,7 +7872,7 @@ a [class*=" ernestrc-"] {
 /* =Archives
 -------------------------------------------------------------- */
 #archive-header {
-    /*padding-bottom: 40px;*/
+    padding-bottom: 40px;
     /*position:absolute;*/
 }
 
@@ -7985,149 +7985,263 @@ a [class*=" ernestrc-"] {
     z-index:100;
 }
 
-@media screen and (min-width:1068px) {
-    div.categories-menu .fa.fa-folder-o{
-        font-size:150px ;
-        left:100px;
-    }
-    div.categories-menu .category-titles{
+/*@media screen and (min-width:1068px) {*/
+    /*div.categories-menu .fa.fa-folder-o{*/
+        /*font-size:150px ;*/
+        /*left:100px;*/
+    /*}*/
+    /*div.categories-menu .category-titles{*/
         /*left: 115px;*/
         /*top:160px;*/
-    }
-}
+    /*}*/
+/*}*/
 
-@media screen and (min-width:600px) {
-    .categories-menu .fa{
-        font-size:120px ;
-        left:100px;
+/*@media screen and (min-width:600px) {*/
+    /*.categories-menu .fa{*/
+        /*font-size:120px ;*/
+        /*left:100px;*/
 
-    }
-    .categories-menu .category-titles{
+    /*}*/
+    /*.categories-menu .category-titles{*/
         /*left: 115px;*/
         /*top:160px;*/
-    }
+    /*}*/
 
-}
+/*}*/
 
-.fa-folder-o{
-    z-index:4000;
+/*.fa-folder-o{*/
+    /*z-index:4000;*/
     /*cursor: pointer;*/
-    position:absolute;
-    left:20px;
-    font-size:100px;
+    /*position:absolute;*/
+    /*left:20px;*/
+    /*font-size:100px;*/
 
-}
+/*}*/
 .category-titles{
     line-height: 12px !important;
-    /*position:absolute;*/
-}
-
-.categories-menu{
-
-    padding-top:40px;
 
 }
 
-.categories-menu li{
-    list-style-type: none;
+/*.categories-menu{*/
+
+    /*padding-top:40px;*/
+
+/*}*/
+
+.category-titles li{
+    /*list-style-type: none;*/
     text-align:justify;
-    max-width:180px;
-    margin:0px auto;
+    max-width:150px;
+    margin:0 auto;
+
 }
 
-.categories-menu h2{
-    margin-bottom:15px;
-}
+/*.categories-menu h2{*/
+    /*margin-bottom:15px;*/
+/*}*/
 
-.categories-menu li:first-child{
-    margin-top:15px !important;
-}
+/*.categories-menu li:first-child{*/
+    /*margin-top:15px !important;*/
+/*}*/
 
-@media screen and (min-width:1068px) {
-    div.archive-menu .fa.fa-search{
-        font-size:150px;
-        right:100px;
-    }
-}
+/*@media screen and (min-width:1068px) {*/
+    /*div.about-menu .fa.fa-search{*/
+        /*font-size:150px;*/
+        /*right:100px;*/
+    /*}*/
+/*}*/
 
-@media screen and (min-width:600px) {
-    .archive-menu .fa{
-        font-size:120px ;
-        right:100px;
-    }
-}
+/*@media screen and (min-width:600px) {*/
+    /*.about-menu .fa{*/
+        /*font-size:120px ;*/
+        /*right:100px;*/
+    /*}*/
+/*}*/
 
-.fa-search{
-    z-index:4000;
+/*.fa-search{*/
+    /*z-index:4000;*/
     /*cursor: pointer;*/
-    position:absolute;
-    right:20px;
-    font-size:100px;
-}
+    /*position:absolute;*/
+    /*right:20px;*/
+    /*font-size:100px;*/
+/*}*/
 
-.archive-menu{
-    padding-top:40px;
-    text-align:right;
-    line-height: 12px !important;
-}
+/*.about-menu{*/
+    /*padding-top:40px;*/
+    /*text-align:right;*/
+    /*line-height: 12px !important;*/
+/*}*/
 
-.archive-menu li{
+.about-menu li{
     list-style-type: none;
 }
 
-@media screen and (min-width:1068px) {
-    div.about-menu .fa.fa-circle{
-        font-size:130px ;
-        left:42.6%;
-        top:52px;
-    }
+/*@media screen and (min-width:1068px) {*/
+    /*div.posts-menu .fa.fa-circle{*/
+        /*font-size:130px ;*/
+        /*left:42.6%;*/
+        /*top:52px;*/
+    /*}*/
 
-}
+/*}*/
 
-@media screen and (min-width:600px) {
-    .about-menu .fa{
-        font-size:100px;
-    }
-}
+/*@media screen and (min-width:600px) {*/
+    /*.posts-menu .fa{*/
+        /*font-size:100px;*/
+    /*}*/
+/*}*/
 
-.about-menu {
-    padding-top:40px;
-}
-
-
-.fa-circle{
-    z-index:4000;
-    /*cursor: pointer;*/
-    position:absolute;
-    left:40%;
-    font-size:100px;
-}
-
-@media screen and (min-width:1068px) {
-    div.posts-menu .fa.fa-circle{
-        font-size:130px ;
-        left:42.6%;
-        top:52px;
-    }
-
-}
-
-@media screen and (min-width:600px) {
-    .posts-menu .fa{
-        font-size:100px;
-    }
-}
-
-.posts-menu {
-    text-align:right;
-    padding-top:40px;
-}
+/*.posts-menu {*/
+    /*padding-top:40px;*/
+/*}*/
 
 .posts-menu li{
-    list-style-type: none;
-    text-align:justify;
-    max-width:180px;
-    margin:0px auto;
-    padding-left:50px;
+    /*list-style-type: none;*/
+    text-align:left;
+    padding-left:30px;
 }
+
+
+/*.fa-circle{*/
+    /*z-index:4000;*/
+    /*cursor: pointer;*/
+    /*position:absolute;*/
+    /*left:40%;*/
+    /*font-size:100px;*/
+/*}*/
+
+/*@media screen and (min-width:1068px) {*/
+    /*div.archive-menu .fa.fa-circle{*/
+        /*font-size:130px ;*/
+        /*left:42.6%;*/
+        /*top:52px;*/
+    /*}*/
+
+/*}*/
+
+/*@media screen and (min-width:600px) {*/
+    /*.archive-menu .fa{*/
+        /*font-size:100px;*/
+    /*}*/
+/*}*/
+
+/*.archive-menu {*/
+    /*text-align:left;*/
+    /*padding-top:40px;*/
+/*}*/
+
+
+.archive-menu {
+    text-align:center !important;
+    /*list-style-type: none;*/
+    padding-left:10px;
+}
+
+/*@media screen and (min-width:1068px) {*/
+    /*div.archive-menu .fa.fa-archive{*/
+        /*font-size:60px ;*/
+/*}*/
+
+/*}*/
+
+/*@media screen and (min-width:600px) {*/
+/*.archive-menu .fa{*/
+/*font-size:30px;*/
+/*}*/
+/*}*/
+
+.fa-archive {
+    padding-top:20px;
+    font-size:60px;
+}
+
+.fa-inbox{
+    padding-top:20px;
+    font-size:60px;
+}
+
+.fa-list{
+    padding-top:20px;
+    font-size:60px;
+}
+.fa-history{
+    padding-top:20px;
+    font-size:60px;
+}
+
+i.fa-lock{
+    -webkit-transition: all 0.25s;
+    -moz-transition: all 0.25s;
+    -ms-transition: all 0.25s;
+    -o-transition: all 0.25s;
+    opacity:0;
+    font-size:15px;
+    position:absolute;
+    right:5px;
+    top:35px;
+    color:inherit;
+}
+
+i{
+    text-align:center !important;
+}
+
+#margins{
+    width:100%;
+    height:inherit;
+}
+
+#margins-container{
+    margin:0 auto !important;
+    max-width:1000px !important;
+}
+
+.col-xs-6{
+    text-align:center;
+    margin-bottom:20px;
+}
+
+.col-xs-3{
+    text-align:center;
+}
+
+#icons-menu{
+    z-index:15 !important;
+    margin-top:20px;
+}
+
+#main{
+    z-index:100;
+}
+
+#ernestrc-icons{
+    z-index:1000;
+    cursor:pointer;
+}
+
+#ernestrc-menu-bar{
+    z-index:999;
+}
+
+#ernestrc-fx{
+    background:#FFFFFF !important;
+}
+
+.sticky-bar{
+    background:#FFFFFF !important;
+}
+
+#ernestrc-menu-bar{
+    background:#FFFFFF !important;
+}
+
+.wrapper-top{
+    background:#FFFFFF !important;
+}
+
+.ernestrc-face .search-comment{
+    font-size:10px;
+    line-height: 10px;
+}
+
 
