--- a/wp-content/themes/ward/style.css
+++ b/wp-content/themes/ward/style.css
@@ -7688,7 +7688,7 @@ a img.aligncenter {
     width: 120px;
     line-height: 140px;
     position: absolute;
-    left: 50%;
+    left: 46%;
     margin-left: -60px;
     bottom: -90px;
     z-index: 10;
@@ -7773,45 +7773,25 @@ a [class*=" ernestrc-"] {
     padding-top:0px;
 }
 
-#top-ernestrc .middle-circle {
-    -webkit-border-radius: 80px;
-    -moz-border-radius: 80px;
-    -ms-border-radius: 80px;
-    -o-border-radius: 80px;
-    border-radius: 80px;
-    background: #FFFFFF;
-    font-size: 60px;
-    height: 120px;
-    width: 120px;
-    line-height: 100px;
-    position: absolute;
-    left: 50%;
-    margin-left: -60px;
-    z-index: 10;
-    color:#F06665;
-}
+/*#top-ernestrc .middle-circle {*/
+    /*-webkit-border-radius: 80px;*/
+    /*-moz-border-radius: 80px;*/
+    /*-ms-border-radius: 80px;*/
+    /*-o-border-radius: 80px;*/
+    /*border-radius: 80px;*/
+    /*background: #FFFFFF;*/
+    /*font-size: 60px;*/
+    /*height: 120px;*/
+    /*width: 120px;*/
+    /*line-height: 100px;*/
+    /*position: absolute;*/
+    /*left: 50%;*/
+    /*margin-left: -60px;*/
+    /*z-index: 10;*/
+    /*color:#F06665;*/
+/*}*/
 
-#top-ernestrc {
-    width:100%;
-    z-index:1000;
-    position:relative;
-}
-#top-ernestrc .sticky-bar {
-    display:block ;
-    width:100% ;
-    height:50px ;
-    background: #FFFFFF;
-}
-#top-ernestrc.affix {
-    position:fixed;
-    top:0px;
-    width:100%;
-    right:0px;
-}
 
-#top-ernestrc .sticky-bar .middle-circle.ernestrc-face{
-    bottom:-50px;
-}
 
 #blog-title{
     /*display:none;*/
@@ -8207,45 +8187,13 @@ i{
     z-index:999;
 }
 
-#ernestrc-fx{
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    -ms-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    background:#020203 !important;
-    color:white !important;
-}
 
-.sticky-bar{
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    -ms-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    background:#020203 !important;
-    text-shadow:0px 0px 2px #FFF;
-}
 
 #ernestrc-menu-bar{
     background:#020203 !important;
 }
 
-.wrapper-top{
-    max-width:1400px;
-    max-height:420px;
-    margin:0 auto;
-}
 
-.home-top {
-    /*height:auto;*/
-    /*overflow:hidden;*/
-
-
-    max-width:1400px;
-    max-height:420px;
-    margin:0 auto;
-    z-index:3;
-    background-repeat: no-repeat !important;
-}
 
 #blog-title{
     padding:40px;
@@ -8317,3 +8265,114 @@ i{
     bottom:5px;
     left:-15px;
 }
+
+#top-ernestrc .middle-circle {
+    left:46%;
+    z-index:10;
+    width: 110px;
+    height: 60px;
+    background: #D6A27E;
+    position: absolute;
+    top:-10px;
+}
+#top-ernestrc .middle-circle:before {
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    content: "";
+    position: absolute;
+    top: -30px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 55px solid transparent;
+    border-right: 55px solid transparent;
+    border-bottom: 30px solid #D6A27E;
+}
+#top-ernestrc .middle-circle:after {
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    content: "";
+    position: absolute;
+    bottom: -30px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 55px solid transparent;
+    border-right: 55px solid transparent;
+    border-top: 30px solid #D6A27E;
+}
+
+#top-ernestrc {
+    width:100%;
+    z-index:1000;
+    position:relative;
+}
+#top-ernestrc .sticky-bar {
+    display:block ;
+    width:100% ;
+    height:50px ;
+    background: #FFFFFF;
+}
+#top-ernestrc.affix {
+    position:fixed;
+    top:60px;
+    width:100%;
+    right:0px;
+}
+
+#top-ernestrc .ernestrc-face{
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    bottom:0px;
+    color:#5e484e;
+    z-index:100;
+    position:absolute;
+    top:-20px;
+    left:-3px;
+}
+#ernestrc-fx{
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+}
+
+.sticky-bar{
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    /*background:#020203 !important;*/
+    position:absolute;
+    top:-50px;
+    background:transparent !important;
+
+
+}
+
+#ernestrc-menu-bar .container{
+    max-height:400px;
+}
+
+.wrapper-top{
+    max-width:1400px;
+    max-height:350px;
+    margin:0 auto;
+}
+
+.home-top {
+    /*height:auto;*/
+    /*overflow:hidden;*/
+    max-width:1400px;
+    max-height:400px;
+    margin:0 auto;
+    z-index:3;
+    background-repeat: no-repeat !important;
+}
+
