--- a/wp-content/themes/ward/style.css
+++ b/wp-content/themes/ward/style.css
@@ -7887,193 +7887,7 @@ a [class*=" ernestrc-"] {
     z-index:100;
 }
 
-/*@media screen and (min-width:1068px) {*/
-    /*div.categories-menu .fa.fa-folder-o{*/
-        /*font-size:150px ;*/
-        /*left:100px;*/
-    /*}*/
-    /*div.categories-menu .category-titles{*/
-        /*left: 115px;*/
-        /*top:160px;*/
-    /*}*/
-/*}*/
 
-/*@media screen and (min-width:600px) {*/
-    /*.categories-menu .fa{*/
-        /*font-size:120px ;*/
-        /*left:100px;*/
-
-    /*}*/
-    /*.categories-menu .category-titles{*/
-        /*left: 115px;*/
-        /*top:160px;*/
-    /*}*/
-
-/*}*/
-
-/*.fa-folder-o{*/
-    /*z-index:4000;*/
-    /*cursor: pointer;*/
-    /*position:absolute;*/
-    /*left:20px;*/
-    /*font-size:100px;*/
-
-/*}*/
-.category-titles{
-    line-height: 12px !important;
-
-}
-
-/*.categories-menu{*/
-
-    /*padding-top:40px;*/
-
-/*}*/
-
-.category-titles li{
-    /*list-style-type: none;*/
-    text-align:justify;
-    max-width:150px;
-    margin:0 auto;
-
-}
-
-/*.categories-menu h2{*/
-    /*margin-bottom:15px;*/
-/*}*/
-
-/*.categories-menu li:first-child{*/
-    /*margin-top:15px !important;*/
-/*}*/
-
-/*@media screen and (min-width:1068px) {*/
-    /*div.about-menu .fa.fa-search{*/
-        /*font-size:150px;*/
-        /*right:100px;*/
-    /*}*/
-/*}*/
-
-/*@media screen and (min-width:600px) {*/
-    /*.about-menu .fa{*/
-        /*font-size:120px ;*/
-        /*right:100px;*/
-    /*}*/
-/*}*/
-
-/*.fa-search{*/
-    /*z-index:4000;*/
-    /*cursor: pointer;*/
-    /*position:absolute;*/
-    /*right:20px;*/
-    /*font-size:100px;*/
-/*}*/
-
-/*.about-menu{*/
-    /*padding-top:40px;*/
-    /*text-align:right;*/
-    /*line-height: 12px !important;*/
-/*}*/
-
-.about-menu li{
-    list-style-type: none;
-}
-
-/*@media screen and (min-width:1068px) {*/
-    /*div.posts-menu .fa.fa-circle{*/
-        /*font-size:130px ;*/
-        /*left:42.6%;*/
-        /*top:52px;*/
-    /*}*/
-
-/*}*/
-
-/*@media screen and (min-width:600px) {*/
-    /*.posts-menu .fa{*/
-        /*font-size:100px;*/
-    /*}*/
-/*}*/
-
-/*.posts-menu {*/
-    /*padding-top:40px;*/
-/*}*/
-
-.posts-menu li{
-    /*list-style-type: none;*/
-    text-align:left;
-    padding-left:30px;
-}
-
-
-/*.fa-circle{*/
-    /*z-index:4000;*/
-    /*cursor: pointer;*/
-    /*position:absolute;*/
-    /*left:40%;*/
-    /*font-size:100px;*/
-/*}*/
-
-/*@media screen and (min-width:1068px) {*/
-    /*div.archive-menu .fa.fa-circle{*/
-        /*font-size:130px ;*/
-        /*left:42.6%;*/
-        /*top:52px;*/
-    /*}*/
-
-/*}*/
-
-/*@media screen and (min-width:600px) {*/
-    /*.archive-menu .fa{*/
-        /*font-size:100px;*/
-    /*}*/
-/*}*/
-
-/*.archive-menu {*/
-    /*text-align:left;*/
-    /*padding-top:40px;*/
-/*}*/
-
-
-.archive-menu {
-    text-align:center !important;
-    /*list-style-type: none;*/
-    padding-left:10px;
-}
-
-/*@media screen and (min-width:1068px) {*/
-    /*div.archive-menu .fa.fa-archive{*/
-        /*font-size:60px ;*/
-/*}*/
-
-/*}*/
-
-/*@media screen and (min-width:600px) {*/
-/*.archive-menu .fa{*/
-/*font-size:30px;*/
-/*}*/
-/*}*/
-
-.fa-archive {
-    color:#FFF;
-    padding-top:20px;
-    font-size:60px;
-}
-
-.fa-inbox{
-    color:#FFF;
-    padding-top:20px;
-    font-size:60px;
-}
-
-.fa-list{
-    color:#FFFFFF;
-    padding-top:20px;
-    font-size:60px;
-}
-.fa-history{
-    color:#FFF;
-    padding-top:20px;
-    font-size:60px;
-}
 
 i.fa-lock{
     -webkit-transition: all 0.25s;
@@ -8116,19 +7930,10 @@ i{
     text-align:center;
 }
 
-#icons-menu{
-    z-index:15 !important;
-    margin-top:20px;
-}
-
 
 #ernestrc-icons{
     z-index:1000;
     cursor:pointer;
-}
-
-#ernestrc-menu-bar{
-    z-index:999;
 }
 
 
@@ -8385,4 +8190,39 @@ i{
     -ms-transition: color 0.5s;
     -o-transition: color 0.5s;
 }
+
+#icons-menu{
+    z-index:1000;
+    position:absolute;
+    top:145px;
+    left:50%;
+    color:#FFF;
+    padding-top:20px;
+    font-size:60px;
+}
+
+.fa-home{
+    margin-left:-550px;
+}
+
+.fa-search{
+    margin-left:-340px;
+}
+
+.fa-tags{
+    margin-left:-135px;
+}
+
+.fa-archive {
+    margin-left:73px;
+}
+
+.fa-rss-square{
+    margin-left:285px;
+}
+
+.fa-inbox{
+    margin-left:494px;
+}
+
 
