--- a/wp-content/themes/ward/style.css
+++ b/wp-content/themes/ward/style.css
@@ -1285,6 +1285,7 @@ pre code {
     left: 25%;
   }
 
+
   .col-sm-push-2 {
     left: 16.666666666666664%;
   }
@@ -7749,7 +7750,7 @@ a [class*=" ernestrc-"] {
     content: "\f2929";
     text-decoration:none;
     font-size:30px;
-    left:29px;
+    left:2px;
     position:absolute;
     top:8px;
 }
@@ -7937,7 +7938,6 @@ i{
 
 #twitter-widget-0{
     float:right;
-    margin:60px 30px 0 0;
 }
 
 .fa.fa-comment{
@@ -9273,6 +9273,8 @@ i.fa-lock{
 }
 
 .submenu{
+    visibility:hidden;
+    cursor:pointer;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
@@ -9286,6 +9288,7 @@ i.fa-lock{
 }
 
 .subsubmenuTag{
+    visibility:hidden;
     top:15px;
     left:34px;
     opacity:0;
@@ -9302,7 +9305,8 @@ i.fa-lock{
 }
 
 .subsubmenuInbox{
-    top:15px;
+    visibility:hidden;
+    top:5px;
     left:34px;
     opacity:0;
     text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
@@ -9338,14 +9342,38 @@ i.fa-lock{
 
 }
 
+#database-menu{
+    left:37px;
+}
+
+#graduation-cap-menu{
+    left:30px;
+}
+
+#rebel-menu{
+    left:35px;
+}
+
+#envelope-menu{
+    top:5px;
+}
+
+#twitter-menu{
+    left:37px;
+}
+
+#linkedin-menu{
+    left:22px;
+}
+
 #title-categories{
-    margin-left:-120px;
+    margin-left:-70px;
 }
 #title-contact{
-    margin-left:-90px;
+    margin-left:-85px;
 }
 #title-archive{
-    margin-left:-90px;
+    margin-left:-85px;
 }
 #title-search{
     margin-left:-75px;
@@ -9357,18 +9385,42 @@ i.fa-lock{
     margin-left:-120px;
 }
 #title-random{
-    margin-left:-75px;
+    margin-left:-50px;
 }
-#title-scala{
-    margin-left:-75px;
+#title-code{
+    margin-left:-115px;
 }
 #title-learn{
-    margin-left:-75px;
+    margin-left:-95px;
 }
 #title-data{
     margin-left:-75px;
 }
+#title-everreach{
+    font-size:25px;
+    color:white !important;
+    margin-left:-110px;
+}
+
+#archive-beta{
+    color:white;
+    opacity:0;
+    left:50%;
+    margin-left:-46px;
+    position:absolute;
+    top:60px;
+    z-index:10000;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    font-family:Lato;
+    font-size:15px;
+}
+
 .subtitles{
+    text-align:center;
     top:-120px;
     left:50%;
     z-index:10000;
@@ -9383,7 +9435,7 @@ i.fa-lock{
     color:white;
 }
 .subsubtitles{
-    font-size:30px;
+    font-size:25px;
 }
 #beta{
     -webkit-transition: all 0.5s;
@@ -9399,3 +9451,14 @@ i.fa-lock{
     top:110px;
 }
 
+.not-found{
+    margin-top:70px;
+}
+
+#secondary{
+    visibility:hidden;
+}
+
+#post-0{
+    margin-top:100px;
+}
