--- a/wp-content/themes/ward/style.css
+++ b/wp-content/themes/ward/style.css
@@ -7741,12 +7741,12 @@ a [class*=" ernestrc-"] {
     left:11px;
     position:absolute;
     top:-8px;
-    text-shadow: 0 0 2px #fff;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
     /*text-shadow:0 -1px 0 #D3D3D3;*/
 }
 
 .ernestrc-everreach:before {
-    text-shadow: 0 0 2px #fff;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
     content: "\f2929";
     text-decoration:none;
     font-size:30px;
@@ -9311,6 +9311,7 @@ i.fa-lock{
 }
 
 .subsubmenuInbox{
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
     visibility:hidden;
     top:5px;
     left:34px;
