--- a/wp-content/themes/ward/style.css
+++ b/wp-content/themes/ward/style.css
@@ -2428,7 +2428,6 @@ textarea.input-lg {
   cursor: pointer;
   background-image: none;
   border: 1px solid transparent;
-  border-radius: 4px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -2509,9 +2508,14 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-primary {
-  color: #ffffff;
-  background-color: #428bca;
-  border-color: #357ebd;
+    -webkit-transition: all 0.5s  ;
+    -moz-transition: all 0.5s  ;
+    -ms-transition: all 0.5s  ;
+    -o-transition: all 0.5s  ;
+    color: #ffffff;
+    background-color: #23DC71;
+    border-color: #23DC71;
+
 }
 
 .btn-primary:hover,
@@ -2519,9 +2523,10 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  color: #ffffff;
-  background-color: #3276b1;
-  border-color: #285e8e;
+    color: #ffffff;
+    background-color: #ECBF08;
+    border-color: #ECBF08;
+
 }
 
 .btn-primary:active,
@@ -2595,9 +2600,9 @@ fieldset[disabled] .btn-warning.active {
     -moz-transition: all 0.5s  ;
     -ms-transition: all 0.5s  ;
     -o-transition: all 0.5s  ;
-  color: #ffffff;
-  background-color: #4B604F;
-  border-color: #4B604F;
+    color: #ffffff;
+    background-color: #23DC71;
+    border-color: #23DC71;
 }
 
 .btn-danger:hover,
@@ -2606,8 +2611,10 @@ fieldset[disabled] .btn-warning.active {
 .btn-danger.active,
 .open .dropdown-toggle.btn-danger {
   color: #ffffff;
-  background-color: #4C3F56;
-  border-color: #4C3F56;
+    background-color: #ECBF08;
+    border-color: #ECBF08;
+
+
 }
 
 .btn-danger:active,
@@ -3263,7 +3270,7 @@ input[type="button"].btn-block {
   padding: 10px 16px;
   font-size: 18px;
   line-height: 1.33;
-  border-radius: 6px;
+  /*border-radius: 6px;*/
 }
 
 select.input-group-lg > .form-control,
@@ -6585,11 +6592,11 @@ dd {
 }
 
 input, textarea {
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  -ms-border-radius: 6px;
-  -o-border-radius: 6px;
-  border-radius: 6px;
+  /*-webkit-border-radius: 6px;*/
+  /*-moz-border-radius: 6px;*/
+  /*-ms-border-radius: 6px;*/
+  /*-o-border-radius: 6px;*/
+  /*border-radius: 6px;*/
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
